“more tabs” button height and z-index fix so it doesn’t go over overlay menus.

--- a/grunt/sass/toolkit/components/_inPageNav.scss
+++ b/grunt/sass/toolkit/components/_inPageNav.scss
@@ -14,11 +14,17 @@
 
 /* tab dropdown */
 .dropdown-tab-select {
-  position: absolute;
-  right: 0;
-
   display: none;
   float: right;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+  box-sizing: border-box;
+  -moz-box-sizing:border-box;
+
+  z-index: 0;
+
   a {
     color: $primary;
     display: block;
@@ -86,6 +92,10 @@
   .tabs > .tab {
     float: left;
     padding: 0 30px 0 0;
+    height: 44px;
+    box-sizing: border-box;
+    -moz-box-sizing:border-box;
+
     a {
       line-height: 44px;
       text-decoration: none;
@@ -131,6 +141,9 @@
     border-bottom: 0;
     position: relative;
     bottom: -11px;
+    box-sizing: border-box;
+    -moz-box-sizing:border-box;
+
     &:before {
       content: "";
       position: absolute;
@@ -181,7 +194,6 @@
     }
 
     &:only-of-type {
-      box-sizing: border-box;
       max-width: 100%;
 
       a {
